--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^6.16.0",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8",
     "swiper": "^10.3.0",
     "three": "^0.156.1",
